objects/SalesOrder__c/SalesOrder__c.object-meta.xml
<CustomObject>
    <label>Sales Order</label>
    <nameField>
        <displayFormat>SO-{000000}</displayFormat>
        <label>Sales Order No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>