objects/SalesOrder__c/fields/Alternative_Invoice_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Invoice_Company_Name__c</fullName>
    <formula>Opportunity__r.Alternative_Invoice_Company_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alternative Invoice Company Name</label>
    <type>Text</type>
</CustomField>