objects/SalesOrder__c/fields/Campaign_Id__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Id__c</fullName>
    <formula>Opportunity__r.CampaignId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Id</label>
    <type>Text</type>
</CustomField>