objects/SalesOrder__c/fields/Customer_s_Print__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Print__c</fullName>
    <label>Customer&apos;s Print</label>
    <length>100</length>
    <type>Text</type>
</CustomField>