objects/SalesOrder__c/fields/Delivery_Address_new__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Address_new__c</fullName>
    <formula>Opportunity__r.Delivery_Address__c</formula>
    <label>Delivery Address new</label>
    <type>Text</type>
</CustomField>