objects/SalesOrder__c/fields/Engineer_s_Print__c.field-meta.xml
<CustomField>
    <fullName>Engineer_s_Print__c</fullName>
    <label>Technician&apos;s Print</label>
    <length>100</length>
    <type>Text</type>
</CustomField>