objects/SalesOrder__c/fields/Engineer_s_Signature__c.field-meta.xml
<CustomField>
    <fullName>Engineer_s_Signature__c</fullName>
    <label>Engineer&apos;s Signature</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>