objects/SalesOrder__c/fields/Invoice_Address__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Address__c</fullName>
    <formula>Opportunity__r.Invoice_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Address</label>
    <type>Text</type>
</CustomField>