objects/SalesOrder__c/fields/Order_No__c.field-meta.xml
<CustomField>
    <fullName>Order_No__c</fullName>
    <label>Order No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>