objects/SalesOrder__c/fields/Order_Total__c.field-meta.xml
<CustomField>
    <fullName>Order_Total__c</fullName>
    <formula>Total_Price__c  +  Vat_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>