objects/SalesOrder__c/fields/PricebookId__c.field-meta.xml
<CustomField>
    <fullName>PricebookId__c</fullName>
    <formula>Account__r.Price_Book__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PricebookId</label>
    <type>Text</type>
</CustomField>