objects/SalesOrder__c/fields/Raised_By__c.field-meta.xml
<CustomField>
    <fullName>Raised_By__c</fullName>
    <label>Raised By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>