objects/SalesOrder__c/fields/Requiremen__c.field-meta.xml
<CustomField>
    <fullName>Requiremen__c</fullName>
    <formula>TEXT(Opportunity__r.Primary_Supplier__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requiremen</label>
    <type>Text</type>
</CustomField>