objects/SalesOrder__c/fields/Sales_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Type__c</fullName>
    <formula>CASE ( RecordTypeId , 
&quot;0124E0000000Cvz&quot; , &quot;Basic Order Confirmation&quot; , 
&quot;0124E0000000Cw4&quot; , &quot;Long Project Order Confirmation&quot;, 
&quot;&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Order Type</label>
    <type>Text</type>
</CustomField>