objects/SalesOrder__c/fields/Sales_type__c.field-meta.xml
<CustomField>
    <fullName>Sales_type__c</fullName>
    <formula>TEXT(Opportunity__r.Sales_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales type</label>
    <type>Text</type>
</CustomField>