objects/SalesOrder__c/fields/Shipping_Postal__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Postal__c</fullName>
    <formula>Account__r.ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Postal</label>
    <type>Text</type>
</CustomField>