objects/SalesOrder__c/fields/Technician_Position__c.field-meta.xml
<CustomField>
    <fullName>Technician_Position__c</fullName>
    <label>Technician Position</label>
    <length>100</length>
    <type>Text</type>
</CustomField>