objects/SalesOrder__c/fields/Technician_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Technician_Signed_Date__c</fullName>
    <label>Technician Signed Date</label>
    <type>Date</type>
</CustomField>