objects/SalesOrder__c/fields/Terms__c.field-meta.xml
<CustomField>
    <fullName>Terms__c</fullName>
    <label>Terms</label>
    <length>48768</length>
    <type>LongTextArea</type>
</CustomField>