objects/SalesOrder__c/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <label>Total Price</label>
    <summarizedField>SalesOrderLineItems__c.Total_Price__c</summarizedField>
    <summaryForeignKey>SalesOrderLineItems__c.Sales_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>