objects/SalesOrder__c/fields/Vat_Total__c.field-meta.xml
<CustomField>
    <fullName>Vat_Total__c</fullName>
    <formula>( Total_Price__c  *   VAT_Rate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vat Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>