objects/SalesOrder__c/fields/Warehouse_id__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_id__c</fullName>
    <formula>&apos;a0e4E000000KTb7&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warehouse id</label>
    <type>Text</type>
</CustomField>