objects/SalesOrder__c/fields/Your_Ref__c.field-meta.xml
<CustomField>
    <fullName>Your_Ref__c</fullName>
    <label>Your Ref</label>
    <length>100</length>
    <type>Text</type>
</CustomField>