objects/SalesOrder__c/recordTypes/Basic_Order_Confirmation.recordType-meta.xml
<RecordType>
    <fullName>Basic_Order_Confirmation</fullName>
    <active>true</active>
    <label>Basic Order Confirmation</label>
</RecordType>