objects/SalesOrder__c/recordTypes/Long_Project_Order_Confirmation.recordType-meta.xml
<RecordType>
    <fullName>Long_Project_Order_Confirmation</fullName>
    <active>true</active>
    <label>Long Project Order Confirmation</label>
</RecordType>